@@ -1,3 +1,8 @@
+2011-02-10  John W. Eaton  <jwe@octave.org>
+
+	* DLD-FUNCTIONS/regexp.cc (octregexp_list): Avoid deprecated
+	Array<T>::resize function.
+
 2011-02-09  Konstantinos Poulios  <logari81@googlemail.com>
 
 	* graphics.cc (axes::properties::update_xlabel_position,
